tests/semantic/global_decl_collection/snapshots/r#mod__semantic__global_decl_collection__global_var_collection__input_with_attribute.snap
---
source: tests/semantic/global_decl_collection/global_var_collection.rs
expression: test_ctx.comp_state.scope_registry
---
scopes:
  0:
    parent: ~
    name_to_id:
      in: 0
    variables:
      - 0
variables:
  0:
    name: in
    value_type:
      Primitive: Float
    def_val:
      kind:
        FloatLiteral: 0
      value_type:
        Primitive: Float
      range:
        start: 0
        end: 0
    range:
      start: 0
      end: 0
    var_kind:
      Input:
        attrs:
          - name: slider
            args:
              - kind:
                  FloatLiteral: 0
                value_type:
                  Primitive: Float
                range:
                  start: 0
                  end: 0
              - kind:
                  FloatLiteral: 1
                value_type:
                  Primitive: Float
                range:
                  start: 0
                  end: 0
            range:
              start: 0
              end: 0
global_scope_id: 0
next_id: 1
