tests/semantic/global_decl_collection/snapshots/r#mod__semantic__global_decl_collection__global_var_collection__multiple_variables_resolution.snap
---
source: tests/semantic/global_decl_collection/global_var_collection.rs
expression: "&test_ctx.prog_ctx.scope_registry"
---
scopes:
  0:
    parent: ~
    name_to_id:
      const: 3
      delay: 2
      in: 0
      out: 1
    variables:
      - 0
      - 1
      - 2
      - 3
    range:
      start: 0
      end: 0
variables:
  0:
    name: in
    value_type:
      Primitive: Int
    def_val:
      kind:
        IntLiteral: 0
      value_type:
        Primitive: Int
      range:
        start: 0
        end: 0
    range:
      start: 0
      end: 0
    var_kind:
      Input:
        attrs: []
  1:
    name: out
    value_type:
      Primitive: Int
    def_val:
      kind:
        IntLiteral: 0
      value_type:
        Primitive: Int
      range:
        start: 0
        end: 0
    range:
      start: 0
      end: 0
    var_kind: Output
  2:
    name: delay
    value_type:
      Primitive: Int
    def_val:
      kind:
        IntLiteral: 0
      value_type:
        Primitive: Int
      range:
        start: 0
        end: 0
    range:
      start: 0
      end: 0
    var_kind: State
  3:
    name: const
    value_type:
      Primitive: Int
    def_val:
      kind:
        IntLiteral: 0
      value_type:
        Primitive: Int
      range:
        start: 0
        end: 0
    range:
      start: 0
      end: 0
    var_kind: GlobalConst
global_scope_ids:
  0: 0
next_scope_id: 1
next_variable_id: 4
