tests/semantic/global_decl_collection/snapshots/r#mod__semantic__global_decl_collection__global_var_collection__simple_input_resolution.snap
---
source: tests/semantic/global_decl_collection/global_var_collection.rs
expression: "&test_ctx.prog_ctx.scope_registry"
---
scopes:
  0:
    parent: ~
    name_to_id: {}
    variables: []
    defined_names: []
    range:
      start: 0
      end: 0
  1:
    parent: ~
    name_to_id:
      in: 0
    variables:
      - 0
    defined_names:
      - in
    range:
      start: 0
      end: 0
variables:
  0:
    name: in
    value_type:
      Primitive: Int
    def_val:
      kind:
        IntLiteral: 0
      value_type:
        Primitive: Int
      range:
        start: 0
        end: 0
    range:
      start: 0
      end: 0
    var_kind:
      Input:
        attrs: []
global_scope_ids:
  0: 1
next_scope_id: 2
next_variable_id: 1
